-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.406 2009-02-05 20:52:16 remko Exp $
-----------------------------------------------------------------------------------------
2009-02-05	pwessel
	* psscale.c:		Now checks if -D is given, and replaced wrong test for -E.

2009-02-05	remko
	* gmt_plot.c (GMT_export2proj4):	Initialize szProj4[0]=0, to avoid ugly
				surprises when no setting was found.
	* gmt_support.c (GMT_read_cpt):	Avoid interpolating hue (converted from RGB) over
				more than 180 degrees.
	* gmt_support.c (GMT_rgb_to_hsv):	Changed to integer logic to avoid errors on
				some compilers. As a result: much shorter code as well.
	* pslib.c (ps_rgb_to_hsv):	---"---
	* pslib.c (ps_color_image):	Image placement now in integers. This nsures that
				placement is consistent with e.g. box drawn with the same
				coordinates.
	* pslib.c (ps_makecolormap):	No longer produce colormap when the number of pixels
				and colors is the same.
	* ex04/*.cpt:		Added comments and COLOR_MODEL = RGB
	* GMT_drywet.cpt:	Added COLOR_MODEL = RGB

2009-02-02	remko
	* minmax.c:		Added -S option to leave space for error bars. Useful with
				-I option and subsequent psxy -E.

2009-01-21	remko
	* psbasemap.{c,txt}:	Erroneously suggested that base was plotted at z=0, instead of
				at the bottom end of the z-axis.

2009-01-20	pwessel
	* mgd77/mgd77manage.c:	Can now request faa to be computed from gobs + eot - ngrav

2009-01-17	jluis
	* ps2raster.c:		Added -W option to help create world files

2009-01-16	pwessel
	* pscoast.c:		Enhanced -D<res>+ where the + lets the application determine the
				next lower resolution should the selected one not be available.
	* gmtselect.c:		Same.
	* grdlandmask.c:	Same.
	* gmt_shore.c:		New public function GMT_shore_adjust_res to handle the above.
	* gmt_proj.c:		Fixed bug in Lambert Conformal Conic for southern hemisphere.